--- a/main.html
+++ b/main.html
@@ -7,6 +7,50 @@
 </head>
 
 <body>
+	<h1>Car Insurance Registration</h1>
+  <form method="post" action="#">
+    <div>
+      <label for="name">Name</label>
+      <input type="text" id="name" name="name" required>
+    </div>
+    <div>
+      <label for="email">Email</label>
+      <input type="email" id="email" name="email" required>
+    </div>
+    <div>
+      <fieldset>
+        <legend>Gender</legend>
+        <input type="radio" id="gender-male" name="gender" value="male" required>
+        <label for="gender-male">Male</label>
+        <input type="radio" id="gender-female" name="gender" value="female">
+        <label for="gender-female">Female</label>
+        <input type="radio" id="gender-other" name="gender" value="other">
+        <label for="gender-other">Other</label>
+      </fieldset>
+    </div>
+    <div>
+      <label for="cars">Car Brand</label>
+      <select id="cars" name="cars">
+        <option value="">--Select--</option>
+        <option value="BMW">BMW</option>
+        <option value="Audi">Audi</option>
+        <option value="Mercedez">Mercedez</option>
+      </select>
+    </div>
+    <div>
+      <label for="carage">Car Age (years)</label>
+      <input type="number" id="carage" name="carage" required>
+    </div>
+    <div>
+      <label for="dop">Date of Purchase</label>
+      <input type="date" id="dop" name="dop" required>
+    </div>
+    <div>
+      <label for="password">Password</label>
+      <input type="password" id="password" name="password" required>
+    </div>
+    <button type="submit">Submit</button>
+  </form>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
